tests/predator-regre/test-0138.err
test-0138.c:108:20: note: writing heap graph to 'test-0138.c-108-0000.dot'...
test-0138.c:108:20: note: writing heap graph to 'test-0138.c-108-0001.dot'...
test-0138.c:112:20: note: writing heap graph to 'test-0138.c-112-0000.dot'...
test-0138.c:112:20: note: writing heap graph to 'test-0138.c-112-0001.dot'...
test-0138.c:64:13: error: free() called with offset 4B
test-0138.c:114:15: note: from call of gl_destroy()
test-0138.c:104:5: note: from call of main()
test-0138.c:115:20: note: writing heap graph to 'test-0138.c-115-0000.dot'...
